[package]
name = "pdb-info"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI to inspect MSVC PDB symbol databases (info, symbols, modules, sources, RVA lookup)."
repository = "https://github.com/AuDowty/pdb-info"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
pdb = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
